adding arguments to javapackager for all builds